сделал страницу контактов

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <h1>Это мой первй гит репозиторий</h1>
+
+    <ul>
+        <li>Lorem, ipsum.</li>
+        <li>Provident, impedit?</li>
+    </ul>
  
  p Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum omnis hic dolore officia impedit nam excepturi illo laborum magni deserunt! Accusantium libero provident reprehenderit ea, delectus velit cum pariatur enim?   
 </body>
